# switching_algorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_sw_qps.sh  ssched_simulator.cc
cmake/: CMakeLists.txt.hdrhistogram_c.in
example/: CMakeLists.txt  simulator_example.cc
experiments/explore_2019/: sb_qps_delay_vs_load.json
hardware-hls/: BUG_FIX_PATCH.md  CONVERSATION_SUMMARY.md  DEBUG_PROMPT.md  PARALLEL_HLS_SETUP.md  QUICK_START.md  run_hls.tcl  run_parallel_hls.py  run_sw_qps.tcl  run_sw_qps_aggressive.tcl  run_sw_qps_diagonal.tcl  run_sw_qps_diagonal_aggressive.tcl  run_sw_qps_log_diagonal.tcl  run_sw_qps_log_diagonal_aggressive.tcl  run_sw_qps_quasi_diagonal.tcl  run_sw_qps_quasi_diagonal_aggressive.tcl  run_sw_qps_uniform.tcl  run_sw_qps_uniform_aggressive.tcl  test_pure  verify_setup.sh
hardware-hls/_ide/: version.ini  workspace_journal.py
hardware-hls/_ide/.wsdata/: clang_dir_map.json
hardware-hls/src/: input_port.h  output_port.h  qps_sampler.cpp  sliding_window.h  sw_qps_top.cpp  sw_qps_top.h  sw_qps_types.h  top.cpp  utils.h
hardware-hls/src_aggressive/: input_port.h  output_port.h  sliding_window.h  sw_qps_top.cpp  sw_qps_types.h  utils.h
hardware-hls/sw_qps_project/: hls.app
hardware-hls/sw_qps_project_base/: hls.app
hardware-hls/sw_qps_project_base/_ide/: settings.json  version.ini  workspace_journal.py  workspace_journal_2444976.py
hardware-hls/sw_qps_project_diagonal/: hls.app
hardware-hls/sw_qps_project_log_diagonal/: hls.app
hardware-hls/sw_qps_project_quasi_diagonal/: hls.app
hardware-hls/sw_qps_project_uniform/: hls.app
hardware-hls/tb/: sw_qps_simulator.cpp  tb_phase1.cpp  tb_sw_qps_diagonal.cpp  tb_sw_qps_hls.cpp  tb_sw_qps_log_diagonal.cpp  tb_sw_qps_pure.cpp  tb_sw_qps_quasi_diagonal.cpp  tb_sw_qps_uniform.cpp
include/saber/: exceptions.hpp  stats.hpp  utils.hpp
software-alg/: CMakeLists.txt  README.md
software-alg/src/scheduler/: sb_qps.h
software-alg/src/switch/: CMakeLists.txt
src/: CMakeLists.txt
src/scheduler/: CMakeLists.txt  batch_scheduler.cc  batch_scheduler.h  edge_coloring_batch_scheduler.cc  edge_coloring_batch_scheduler.h  max_weight_scheduler.cc  max_weight_scheduler.h  maximal_scheduler.cc  maximal_scheduler.h  miscellaneous.cc  miscellaneous.h  qps.cc  qps.h  sb_qps.cc  sb_qps.h  scheduler.h  scheduler_factory.cc  scheduler_factory.h
src/simulator/: simulator.cc  simulator.h  simulator_factory.cc  simulator_factory.h
src/switch/: iq_switch.cc  iq_switch.h  switch.h
src/traffic_generator/: CMakeLists.txt
test/: 231-Cfg-OutputStreams.cc  CMakeLists.txt  test_scheduler.cc  test_traffic_generator.cc  test_util.cc
